<resources>

    <!-- CUSTOMIZE THESE FOR YOUR APP -->

    <string name="app_name">CARVIS</string>
    <string name="facebook_app_id">966289496804395</string>

    <!-- REQUIRED FOR GENERAL APP FUNCTIONALITY - YOU MAY WANT TO KEEP THESE -->

    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="sign_in_email">Email</string>
    <string name="sign_in_username">Username/Email</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_new_account">New User?</string>
    <string name="sign_in_forgot_password">Forgot Your Password?</string>
    <string name="sign_in_or">or sign in with</string>
    <string name="main_nav_menu_default_user_text">\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_mfa">MFA Code</string>
    <string name="title_activity_sign_up_confirm">Confirm Account</string>
    <string name="forgot_password_header">Forgot your password?</string>
    <string name="forgot_password_body">Set your new password with the verification code that was sent to you.</string>
    <string name="forgot_password_input_code_hint">Verification code</string>
    <string name="forgot_password_button_hint">Set password</string>
    <string name="mfa_header">MFA verification is required to authenticate.</string>
    <string name="mfa_code_sent_message">Code sent.</string>
    <string name="verify_button_text">Verify</string>
    <string name="username_text">Username</string>
    <string name="given_name_text">Full name</string>
    <string name="email_address_text">Email address</string>
    <string name="phone_number_text">Phone number (0851234567)</string>
    <string name="sign_up_header">Enter the following information to sign up.</string>
    <string name="sign_up_confirm_code">Confirmation code</string>
    <string name="sign_up_confirm_text">Confirm</string>
    <string name="sign_up_confirm_code_sent">A confirmation code was sent.</string>
    <string name="sign_up_confirm_enter_code">Please enter the code below to confirm your account.</string>
    <string name="sign_up_confirm_title">Confirm your account</string>
    <string name="password_change_success">Password change succeeded.</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="sign_up_success">Sign up succeeded.</string>
    <string name="sign_up_failed">Sign up failed.</string>
    <string name="login_success">Login succeeded.</string>
    <string name="login_failed">Login failed.</string>
    <string name="sign_up_confirm_success">Sign up confirmation succeeded.</string>
    <string name="sign_up_confirm_failed">Sign up confirmation failed.</string>

    <!-- USED BY DEMO FEATURES ONLY - YOU CAN DISCARD THESE WITH THE DEMO FOLDER -->

    <string name="fragment_demo_instruction_overview_header">Overview</string>
    <string name="fragment_demo_instruction_description_header">Sample App Features</string>
    <string name="feature_sign_in_title">User Sign-in</string>
    <string name="feature_sign_in_subtitle">Let your users sign in with public identity providers or your own identity system.</string>
    <string name="feature_sign_in_overview">Whether your users sign in or not, the User sign-in feature configures Amazon Cognito to uniquely identify the user and provide your app the appropriate credentials to access your AWS resources.</string>
    <string name="feature_sign_in_description">The Sample App demonstrates assignment of a unique identifier for the user, the Amazon Cognito User ID. If optional or mandatory User Sign-in has been enabled in your project, then the Sample App also includes a sign-in screen, with a button for each configured sign-in provider.</string>
    <string name="feature_sign_in_powered_by">Powered by Amazon Cognito</string>
    <string name="feature_sign_in_demo_button">Demo User Identity</string>

    <string name="main_fragment_title_user_identity">User Identity</string>
    <string name="main_fragment_subtitle_user_identity">Keep track of users</string>
    <string name="identity_demo_text_view_description">Displays the user identity.</string>
    <string name="unknown_user">Guest User</string>
    <string name="user_id">USER IDENTIFIER</string>
    <string name="identity_demo_textview_username_description">User\'s name</string>
    <string name="identity_demo_textview_userid_description">User\'s unique identifier</string>
    <string name="identity_demo_unknown_identity_text">&lt;UNKNOWN IDENTITY&gt;</string>
    <string name="identity_demo_dialog_dismiss_text">DISMISS</string>
    <string name="identity_demo_error_dialog_title">Failed Identity Retrieval</string>
    <string name="identity_demo_error_message_failed_get_identity">Could not retrieve the user identity:\u0020</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="firstName">First Name</string>
    <string name="surname">Surname</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="signIn">Sign In</string>
    <string name="startJourney">Start Journey</string>
    <string name="initialSpeed">0 km/h</string>
    <string name="speedLimit">0 k/m</string>
    <string name="speedMetric">km/h</string>
    <string name="journeys">Previous Journeys</string>
    <string name="addCamera">Add Speed Camera</string>
    <string name="roadMap">Map</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="title_activity_speed_camera_map">Map</string>
    <string name="userStatistics">User Stats</string>
    <string name="averageJourneyTime">Avg. Journey Time (mins)</string>
    <string name="numJourneys">Number of Journeys</string>
    <string name="numOverSpeeds">Over Speed Journeys</string>
    <string name="dayWithMostOverSpeed">Day Most Likely to Speed</string>
    <string name="mostOverSpeedRoad">Most Over Limit Road</string>
    <string name="memberSince">Member Since</string>
    <string name="percentageOverSpeed">% Speeding Journeys</string>
    <string name="kmTravelled">Distance Travelled(km)</string>
    <string name="avgJourneyKM">Avg. Journey Distance(km)</string>
    <string name="journeyHistory">Journey History</string>
    <string name="daysSinceLastOverSpeed1">It has been </string>
    <string name="daysSinceLastOverSpeed2"> days since your last Speeding incident </string>
    <string name="daysSinceLastOverSpeed3"> day since your last Speeding incident </string>
    <string name="wellDone">Well Done !</string>
    <string name="slowingDown">It may be advisable to consider slowing down</string>
    <string name="locale">Locale</string>
    <string name="settings">Settings</string>
    <string name="emergencySMS">EMERGENCY SMS</string>
    <string name="emergencyText">I have been in a motor accident. My co-ordinates are: </string>
    <string name="emergencyContact">Emergency Contact</string>
    <string name="addTrafficIndicator">Bad Traffic</string>
    <string name="overSpeedDay">The day you tend to overspeed on is </string>
    <string name="alternativeRoute">Perhaps taking an alternative route may be advisable on this particular day</string>
    <string name="thanks">Thanks for helping CARVIS help promote safe driving :)</string>
    <string name="numTrafficIncidents"> times you have indicated heavy traffic</string>
    <string name="numTrafficIncidents2"> time you have indicated heavy traffic</string>
    <string name="promtTraffic">It would help CARVIS better promote safe driving if you could indicate heavy Traffic. Thanks again</string>
    <string name="noOverSpeeds">You have yet to overspeed using CARVIS, Congratulations!</string>
    <string name="roadsWithOverspeed">The following roads have experienced heavy traffic today</string>
    <string name="noRoadsWithOverspeed">No Roads have been indicated having heavy traffic today.</string>
    <string name="voiceUpdate">Speed camera notifications</string>
    <string name="endJourney">End Journey</string>
    <string name="noPastWeekRoad">You havent used any roads in the past week which have been indicated to have heavy traffic</string>
    <string name="pastWeekRoad">You have regularly used the following roads which have been indicated to have heavy traffic in the past week</string>
    <string name="overSpeedLimitVoice">Over limit notification</string>
    <string name="mobileNumberEntry">e.g 0851234567</string>
    <string name="gettingStats">Getting your stats....</string>

    <string name="currentlyDriving">I am currently driving. I will give you a call back when I reach my destination</string>
    <string name="blockIncoming">Block incoming calls</string>
    <string name="missedCall">While Driving you missed calls from</string>
    <string name="overSpeedDayTitle">Days speed on</string>
    <string name="averageSpeed">Avg. Speed(km)</string>
    <string name="receiveTraffic">Receive traffic notifications</string>
    <string name="receiveTrafficVoice">Receive voice traffic updates</string>
    <string name="noOverSpeedDay">You have not yet driven over the speed limit on any date. Well done !</string>
    <string name="trafficPerim">Traffic notification (km)</string>
    <string name="firebaseKey">key=AAAADMY4DF0:APA91bF-6FzxakqhfIG1Zc2O2auOhnjSBHcIYmqm2RJVcRnT_tcE6Lz6LqLlujGQazCwh4XSDVxI_vXRrHZ10OMc9s-XeRtbenFVw4GbpqbqCMSVmEpv8T-8VxgdqiUwGLIKbASydy5h</string>
    <string name="montlyJourney">Monthly Journeys</string>
    <string name="monthlyKm">Monthly Kilometers</string>
    <string name="overSpeedDays">Over Speed Days</string>
    <string name="enterUsername">Enter username</string>
    <string name="legendText"></string>
    <string name="avgKilomSpeed">Avg. km Per Speeding Incident</string>

    <string-array name="counties">
        <item>Dublin</item>
        <item>Cork</item>
        <item>Galway</item>
        <item>Kilkenny</item>
        <item>Waterford</item>
    </string-array>
    <string-array name="voiceUpdateChoices">
        <item>YES</item>
        <item>NO</item>
    </string-array>

    <string-array name="blockIncomingCallsChoices">
        <item>NO</item>
        <item>YES</item>
    </string-array>
</resources>
