<?xml version="1.0" encoding="utf-8"?>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/memberSince" />

            <TextView
                android:id="@+id/memberSince"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/kmTravelled" />

        <TextView
            android:id="@+id/kilomTravelled"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow>

        <TextView
            android:padding="3dip"
            android:text="@string/avgJourneyKM" />

        <TextView
            android:id="@+id/avgJourneykilom"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/averageJourneyTime" />

            <TextView
                android:id="@+id/averageJourneyTime"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>


        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/numJourneys" />

            <TextView

                android:id="@+id/numberOfUserJourneys"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/numOverSpeeds"
                android:layout_width="match_parent" />

            <TextView
                android:id="@+id/numberOfOverSpeedJourneys"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/percentageOverSpeed" />

            <TextView
                android:id="@+id/overSpeedPercentage"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/dayWithMostOverSpeed" />

            <TextView
                android:id="@+id/overSpeedDay"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

        <TableRow>

            <TextView
                android:padding="3dip"
                android:text="@string/mostOverSpeedRoad" />

            <TextView
                android:id="@+id/overSpeedRoad"
                android:gravity="right"
                android:padding="3dip"
                android:text="" />
        </TableRow>

    </TableLayout>
    <!--<GridLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@color/red"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true">-->

    <!--<ImageButton-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/imageButton3" />-->

    <!--<ImageButton-->
    <!--android:layout_width="103dp"-->
    <!--android:layout_height="72dp"-->
    <!--android:id="@+id/imageButton2"-->
    <!--android:layout_row="1"-->
    <!--android:layout_column="0" />-->

    <!--<ImageButton-->
    <!--android:layout_width="73dp"-->
    <!--android:layout_height="78dp"-->
    <!--android:id="@+id/imageButton"-->
    <!--android:layout_row="1"-->
    <!--android:layout_column="2" />-->
    <!--</GridLayout>-->
