<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/silver"
        android:id="@+id/messageContainer"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <!--<Button-->
        <!--android:layout_width="0dip"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--android:textColor="@color/white"-->
        <!--android:background="@drawable/shape"/>-->

        <TextView
            android:id="@+id/roadsToAvoid"
            android:gravity="center"
            android:padding="40dp"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="normal"
            android:background="@color/silver"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/overSpeedDay"
            android:gravity="center"
            android:padding="40dp"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="normal"
            android:background="@color/silver"
            android:visibility="visible"
            android:layout_alignBaseline="@+id/roadsToAvoid"
            android:layout_alignBottom="@+id/roadsToAvoid"
            android:layout_alignLeft="@+id/roadsToAvoid"
            android:layout_alignStart="@+id/roadsToAvoid"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/numTrafficReported"
            android:gravity="center"
            android:padding="40dp"
            android:text=""
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="normal"
            android:background="@color/silver"
            android:visibility="visible"

            android:layout_alignBaseline="@+id/roadsToAvoid"
            android:layout_alignBottom="@+id/roadsToAvoid"
            android:layout_alignLeft="@+id/roadsToAvoid"
            android:layout_alignStart="@+id/roadsToAvoid"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/todayTrafficIncident"
            android:gravity="center"
            android:padding="40dp"
            android:text=""
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="normal"
            android:background="@color/silver"
            android:visibility="visible"
            android:layout_alignBaseline="@+id/roadsToAvoid"
            android:layout_alignBottom="@+id/roadsToAvoid"
            android:layout_alignLeft="@+id/roadsToAvoid"
            android:layout_alignStart="@+id/roadsToAvoid"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/daysSinceOverSpeed"
            android:gravity="center"
            android:padding="40dp"
            android:text=""
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="normal"
            android:background="@color/silver"
            android:visibility="visible"
            android:layout_alignBaseline="@+id/roadsToAvoid"
            android:layout_alignBottom="@+id/roadsToAvoid"
            android:layout_alignLeft="@+id/roadsToAvoid"
            android:layout_alignStart="@+id/roadsToAvoid"
            android:layout_marginTop="10dp" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/buttonBackground">

        <RelativeLayout
            android:id="@+id/startJourneyRelative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape3"
            android:clickable="true">

            <ImageView
                android:id="@+id/startJourneyImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/speedlimit60" />

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/startJourneyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startJourney"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/startJourneyImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:paddingBottom="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/prevJourneyRel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape3">

            <ImageView
                android:id="@+id/prevJourneyImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/journey"
                />

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/prevJourneyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/journeys"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/prevJourneyImage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:paddingBottom="10dp"/>
        </RelativeLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/buttonBackground">

        <RelativeLayout
            android:id="@+id/mapRel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape3"
            android:clickable="true">

            <ImageView
                android:id="@+id/map"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/speed_cam_new" />

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/mapText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roadMap"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/map"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:paddingBottom="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/statsRel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape3">

            <ImageView
                android:id="@+id/userstatsimage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/statistics"
                />

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/userstatstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userStatistics"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:layout_below="@+id/userstatsimage"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="11dp"
                android:paddingBottom="10dp"/>
        </RelativeLayout>



    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@android:id/list"/>
</LinearLayout>
